usar DTO en el registro de usuarios